--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "sharp": "^0.33.4",
-    "zustand": "^4.5.2"
+    "sharp": "^0.33.4"
   }
 }
